Orgaizing 3js code in Classes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="/index.css" />
   </head>
   <body class="grid__body relative z-0 bg-body-color" id="body">
-    <canvas id="myThreeJsCanvas" class="fixed top-0 bottom-0 left-0 right-0">
-    </canvas>
+    <div id="myThreeJsCanvas" class="fixed top-0 bottom-0 left-0 right-0"></div>
     <!-- <div class="blocks">
       <div class="block block-top">
         <h1 class="loading__text section__title">WELCOME</h1>
