--- a/index.html
+++ b/index.html
@@ -186,83 +186,120 @@
       </div>
     </section>
 
-    <section class="section about grid" id="about">
-      <div class="title__container about-title">
-        <h1 class="section__title about-title">ABOUT</h1>
+    <section
+      class="about sm:px-20 lg:px-1 lg:py-16 sm:pt-[250px] xs:py-[40px] py-16 max-w-7xl mx-auto relative z-0"
+      id="about"
+    >
+      <div
+        class="title-container about-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
+      >
+        <h1
+          class="about-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary"
+        >
+          ABOUT
+        </h1>
       </div>
 
-      <div class="about__container container">
-        <div class="about__box">
-          <i class="ri-award-line about__icon"></i>
-          <h3 class="about__box-title">Experience</h3>
-          <span class="about__box-subtitle"
-            >3 years experienced IT professional with a passion for web design
-            and development.</span
+      <div
+        class="about-container lg:mt-[300px] mt-56 flex flex-wrap gap-5 justify-center"
+      >
+        <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
+          <div
+            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
           >
+            <i
+              class="ri-award-line text-primary text-[60px] md:text-[80px]"
+            ></i>
+            <h3
+              class="text-tertiary sm:text-[30px] text-center tracking-[1.5px]"
+            >
+              Experience
+            </h3>
+            <p class="text-tertiary font-body md:text-[20.8px] text-center p-5">
+              3 years experienced IT professional with a passion for web design
+              and development.
+            </p>
+          </div>
         </div>
+        <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
+          <div
+            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
+          >
+            <i
+              class="ri-layout-2-line text-primary text-[60px] md:text-[80px]"
+            ></i>
+            <h3
+              class="text-tertiary sm:text-[30px] text-center tracking-[1.5px]"
+            >
+              UI/UX
+            </h3>
+            <p class="text-tertiary font-body md:text-[20.8px] text-center p-5">
+              2 years background in sales. I understand the importance of
+              creating user-friendly interfaces.
+            </p>
+          </div>
+        </div>
+        <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
+          <div
+            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
+          >
+            <i class="ri-team-line text-primary text-[60px] md:text-[80px]"></i>
+            <h3
+              class="text-tertiary sm:text-[30px] text-center tracking-[1.5px]"
+            >
+              Collaboration
+            </h3>
+            <p class="text-tertiary font-body md:text-[20.8px] text-center p-5">
+              Let's work together to create something beautiful and effective.
+            </p>
+          </div>
+        </div>
+        <!-- </div> -->
+        <div id="sm:px-20  sm:py-16  xs:py-[40px] py-16">
+          <div class="flex flex-row flex-wrap justify-center gap-10">
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-        <div class="about__box">
-          <i class="ri-layout-2-line about__icon"></i>
-          <h3 class="about__box-title">UI/UX</h3>
-          <span class="about__box-description"
-            >With a 2 years background in sales, I understand the importance of
-            creating user-friendly interfaces that engage and delight
-            customers.</span
-          >
-        </div>
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-        <div class="about__box">
-          <i class="ri-team-line about__icon"></i>
-          <h3 class="about__box-title">Collaboration</h3>
-          <span class="about__box-description">
-            Let's work together to create something beautiful and
-            effective!</span
-          >
-        </div>
-        <div id="skills--box">
-          <i class="ri-settings-3-line"></i>
-          <h3 class="about__box-title">Skills</h3>
-          <div class="about__box-skills-container">
-            <div class="about__box-skill">
-              <img src="/img/icons8-html-5-48.png" alt="" />
-              <span>HTML</span>
-            </div>
-            <div class="about__box-skill">
-              <img src="/img/icons8-css3-48.png" alt="" />
-              <span>CSS</span>
-            </div>
-            <div class="about__box-skill">
-              <img src="/img/icons8-javascript-48.png" alt="" />
-              <span>JavaScript</span>
-            </div>
-            <div class="about__box-skill">
-              <img src="/img/icons8-figma-48.png" alt="" />
-              <span>Figma</span>
-            </div>
-            <div class="about__box-skill">
-              <img src="/img/icons8-git-48.png" alt="" />
-              <span>Git</span>
-            </div>
-            <div class="about__box-skill">
-              <img src="/img/icons8-npm-48.png" alt="" />
-              <span>NPM</span>
-            </div>
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+            <div class="w-[15rem] h-[11rem]" id="tech"></div>
           </div>
         </div>
       </div>
     </section>
-    <section class="section projects grid" id="projects">
-      <div class="title__container project-title">
-        <h1 class="section__title project-title">Projects</h1>
+    <section
+      class="projects sm:px-20 lg:px-1 lg:py-16 sm:pt-[250px] xs:py-[40px] py-16 max-w-7xl mx-auto relative z-0"
+      id="projects"
+    >
+      <div
+        class="title-container project-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
+      >
+        <h1
+          class="about-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary project-title"
+        >
+          Projects
+        </h1>
       </div>
 
-      <div class="projects__container container">
+      <div class="projects-container container">
         <div class="sticky__wrapper">
           <div class="slider__wrapper">
             <ul class="slider">
-              <li class="slider__item">
-                <div class="slider__img_wrapper">
-                  <div class="project__hover">
+              <li class="slider-item">
+                <div class="slider-img-wrapper">
+                  <div class="project-hover">
                     <h1 class="project__title">Portfolio</h1>
                     <p class="project__description">Design and Development</p>
                     <div class="project__buttons">
@@ -280,13 +317,13 @@
                     src="https://picsum.photos/id/5/700
                     "
                     alt="slider--image"
-                    class="slider__img"
+                    class="slider-img"
                   />
                 </div>
               </li>
-              <li class="slider__item">
-                <div class="slider__img_wrapper">
-                  <div class="project__hover">
+              <li class="slider-item">
+                <div class="slider-img-wrapper">
+                  <div class="project-hover">
                     <h1 class="project__title">Portfolio</h1>
                     <p class="project__description">Design and Development</p>
                     <div class="project__buttons">
@@ -304,13 +341,13 @@
                     src="https://picsum.photos/id/0/700
                     "
                     alt="slider--image"
-                    class="slider__img"
+                    class="slider-img"
                   />
                 </div>
               </li>
-              <li class="slider__item">
-                <div class="slider__img_wrapper">
-                  <div class="project__hover">
+              <li class="slider-item">
+                <div class="slider-img-wrapper">
+                  <div class="project-hover">
                     <h1 class="project__title">Portfolio</h1>
                     <p class="project__description">Design and Development</p>
                     <div class="project__buttons">
@@ -328,13 +365,13 @@
                     src="https://picsum.photos/id/2/700
                     "
                     alt="slider--image"
-                    class="slider__img"
+                    class="slider-img"
                   />
                 </div>
               </li>
-              <li class="slider__item">
-                <div class="slider__img_wrapper">
-                  <div class="project__hover">
+              <li class="slider-item">
+                <div class="slider-img-wrapper">
+                  <div class="project-hover">
                     <h1 class="project__title">Portfolio</h1>
                     <p class="project__description">Design and Development</p>
                     <div class="project__buttons">
@@ -352,7 +389,7 @@
                     src="https://picsum.photos/id/3/700
                     "
                     alt="slider--image"
-                    class="slider__img"
+                    class="slider-img"
                   />
                 </div>
               </li>
