--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="grid__body relative z-0 bg-body-color" id="body">
     <div id="myThreeJsCanvas" class="fixed top-0 bottom-0 left-0 right-0"></div>
-    <div class="blocks w-screen h-screen absolute">
+    <!-- <div class="blocks w-screen h-screen absolute">
       <div
         class="bg-nav-bg fixed w-screen h-1/2 grid items-end justify-center z-50 block-top top-0"
       >
@@ -31,7 +31,7 @@
           <div class="loader absolute w-0 h-full bg-body-color"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <nav class="sm:px-24 px-16 w-full flex items-center py-10 fixed top-0 z-20">
       <img
