--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
     />
     <link rel="stylesheet" href="/index.css" />
   </head>
-  <body class="grid__body relative z-0 bg-body-color" id="body">
+  <body class="overflow-x-hidden relative z-0 bg-body-color" id="body">
     <div id="myThreeJsCanvas" class="fixed top-0 bottom-0 left-0 right-0"></div>
-    <!-- <div class="blocks w-screen h-screen absolute">
+    <div class="blocks w-screen h-screen fixed z-20">
       <div
-        class="bg-nav-bg fixed w-screen h-1/2 grid items-end justify-center z-50 block-top top-0"
+        class="bg-nav-bg w-screen h-1/2 grid items-end justify-center block-top top-0 overflow-hidden"
       >
         <h1
-          class="md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] font-title text-primary loading-text tracking-[30px] text-center col-[initial] pointer-events-none translate-y-[100%]"
+          class="md:text-[110px] sm:text-[90px] xs:text-[60px] text-[30px] font-title text-primary loading-text tracking-[20px] justify-self-center col-[initial] pointer-events-none translate-y-[100%]"
         >
           WELCOME
         </h1>
       </div>
       <div
-        class="bg-nav-bg fixed w-screen h-1/2 grid items-start justify-center z-50 block-bottom bottom-0"
+        class="bg-nav-bg w-screen h-1/2 grid items-start justify-center block-bottom bottom-0"
       >
         <div class="relative w-[400px] h-[2px] border-0 bg-primary">
           <div class="loader absolute w-0 h-full bg-body-color"></div>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <nav class="sm:px-24 px-16 w-full flex items-center py-10 fixed top-0 z-20">
+    <!-- <nav
+      class="sm:px-24 px-16 w-full flex items-center py-10 absolute left-0 right-0 top-0 z-20"
+    >
       <img
         id="nav-toggle"
         src="/img/menu.svg"
@@ -41,7 +43,7 @@
         class="sm:hidden w-[28px] h-[28px] object-contain cursor-pointer absolute top-[2rem] right-[2rem]"
       />
       <div
-        class="sm:flex hidden items-center justify-end w-full max-w-7xl mx-auto"
+        class="sm:flex hidden items-center justify-end w-screen max-w-7xl mx-auto"
       >
         <ul class="list-none sm:flex flex-row sm:gap-20">
           <li
@@ -68,13 +70,13 @@
       </div>
       <div
         id="nav-menu"
-        class="sm:hidden flex absolute top-0 right-0 w-full h-screen flex-1 justify-center items-center p-6 bg-nav-bg z-10"
+        class="sm:hidden flex fixed top-0 right-0 left-0 w-screen h-screen flex-1 justify-center items-center p-6 bg-nav-bg z-10"
       >
         <img
           id="nav-close"
           src="/img/close.svg"
           alt="menu"
-          class="nav-close w-[28px] h-[28px] object-contain cursor-pointer absolute top-[2rem] right-[2rem]"
+          class="nav-close w-[28px] h-[28px] cursor-pointer absolute top-[2rem] right-[2rem]"
         />
 
         <ul class="list-none sm:flex sm:gap-20 flex-col gap-4">
@@ -100,9 +102,9 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
-    <section class="home w-full h-screen mx-auto" id="home">
+    <section class="home mx-auto" id="home">
       <div
         class="home-container lg:px-15 sm:px-20 xs:py-[120px] sm:py-[130px] py-32 lg:flex lg:flex-row xs:flex xs:flex-col xs:gap-11 xs:items-center lg:items-center lg:justify-around"
       >
@@ -167,7 +169,7 @@
         </div>
 
         <div
-          class="flex flex-col justify-center items-center img-container bg-body-color md:mt-[50px] sm:mt-[30px] mt-[25px] sm:w-[450px] sm:h-[500px] xs:w-[370px] xs:h-[450px]"
+          class="flex flex-col justify-center items-center img-container bg-body-color md:mt-[50px] sm:mt-[30px] mt-[25px] sm:w-[450px] sm:h-[500px] xs:w-[350px] xs:h-[450px]"
         >
           <div class="home-cards bg-secondary" id="card-design">
             <i
@@ -209,11 +211,11 @@
       </div>
 
       <div
-        class="about-container lg:mt-[300px] mt-56 flex flex-wrap gap-5 justify-center"
+        class="about-container lg:mt-[300px] mt-56 relative flex flex-wrap gap-5 justify-center"
       >
         <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
           <div
-            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
+            class="w-full p-5 rounded-[20px] shadow-card bg-nav-bg md:bg-secondary flex justify-center items-center flex-col min-h-[360px]"
           >
             <i
               class="ri-award-line text-primary text-[60px] md:text-[80px]"
@@ -231,7 +233,7 @@
         </div>
         <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
           <div
-            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
+            class="w-full p-5 rounded-[20px] shadow-card bg-nav-bg md:bg-secondary flex justify-center items-center flex-col min-h-[360px]"
           >
             <i
               class="ri-layout-2-line text-primary text-[60px] md:text-[80px]"
@@ -249,7 +251,7 @@
         </div>
         <div class="about-box xs:w-[300px] lg:w-[400px] w-full">
           <div
-            class="w-full p-5 rounded-[20px] shadow-card bg-secondary flex justify-center items-center flex-col min-h-[360px]"
+            class="w-full p-5 rounded-[20px] shadow-card bg-nav-bg md:bg-secondary flex justify-center items-center flex-col min-h-[360px]"
           >
             <i class="ri-team-line text-primary text-[60px] md:text-[80px]"></i>
             <h3
@@ -262,49 +264,50 @@
             </p>
           </div>
         </div>
-        <!-- </div> -->
-        <div id="sm:px-20  sm:py-16  xs:py-[40px] py-16">
-          <div class="flex flex-row flex-wrap justify-center gap-10">
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+      </div>
+      <div id="  sm:px-20  sm:py-16  xs:py-[40px] py-16">
+        <div
+          class="tech-container flex flex-row flex-wrap sm:justify-center lg:gap-10 justify-between"
+        >
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
 
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
-            <div class="w-[15rem] h-[11rem]" id="tech"></div>
-          </div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem]" id="tech"></div>
         </div>
       </div>
     </section>
     <section
-      class="projects sm:px-20 lg:px-1 lg:py-16 sm:pt-[250px] xs:py-[40px] py-16 max-w-7xl mx-auto relative z-0"
+      class="projects sm:px-0 lg:px-1 lg:py-16 xs:pt-[200px] xs:pb-[40px] py-16 max-w-7xl mx-auto relative z-0"
       id="projects"
     >
       <div
         class="title-container project-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
       >
         <h1
-          class="about-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary project-title"
+          class="project-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary project-title"
         >
-          Projects
+          Works
         </h1>
       </div>
 
       <div
-        class="projects-container lg:mt-[300px] mt-56 flex flex-wrap gap-5 justify-center items-center overflow-hidden pl-[100%] sticky"
+        class="projects-container lg:mt-[300px] mt-56 flex flex-wrap gap-5 justify-center items-center overflow-hidden lg:pl-[100%] sticky"
       >
-        <ul class="flex">
+        <ul class="flex xs:pl-[100rem] md:pl-0">
           <li class="slider-item w-[25rem] h-[28rem] py-0 px-[1rem]">
             <div class="slider-content w-full h-full relative overflow-hidden">
               <div
